plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral {
        content { includeGroupByRegex(".*") }
    }
    maven {
        name = "Aliyun"
        url = "https://maven.aliyun.com/repository/public"
        content { includeGroupByRegex(".*") }
    }
    maven {
        name = "Tencent"
        url = "https://mirrors.tencent.com/nexus/repository/maven-public"
        content { includeGroupByRegex(".*") }
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev/"
        content {
            includeGroup "appeng"
            includeGroup "de.mari_023"
            includeGroup "dev.technici4n"
            includeGroup "mekanism"
        }
    }
    maven {
        name = "Curios"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
    }
    maven {
        url = "https://maven.createmod.net"
    }
    maven {
        url = "https://maven.minecraftforge.net"
    }
    maven {
        name = "JEI"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "MixinExtras"
        url = "https://repo.spongepowered.org/repository/maven-public/"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xmaxerrs' << '1000'
}

minecraft {
    mappings channel: 'official', version: "${minecraft_version}"

    copyIdeResources = true

    runs {
        client
        server
        gameTestServer
        data
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

processResources {
    var props = [
        'mod_id'                : mod_id,
        'mod_name'              : mod_name,
        'mod_license'           : mod_license,
        'mod_version'           : mod_version,
        'mod_authors'           : mod_authors,
        'mod_description'       : mod_description,
        'loader_version_range'  : loader_version_range,
        'forge_version_range'   : forge_version_range,
        'minecraft_version_range': minecraft_version_range,
    ]
    inputs.properties props
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand props
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation("appeng:appliedenergistics2-forge:${ae2_version}") {
        exclude group: 'de.mari_023', module: 'ae2wtlib'
    }
    compileOnly "top.theillusivec4.curios:curios-forge:${curios_version}:api"
    runtimeOnly "top.theillusivec4.curios:curios-forge:${curios_version}"

    // JEI is optional for this mod
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:15.2.0.27")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.2.0.27")

    // Jade is optional for this mod
    compileOnly fg.deobf("curse.maven:jade-324717:6855440")
    runtimeOnly fg.deobf("curse.maven:jade-324717:6855440")

    // Applied Flux is optional for this mod
    compileOnly fg.deobf("curse.maven:applied-flux-965012:7651647")
    runtimeOnly fg.deobf("curse.maven:applied-flux-965012:7651647")

    // AdvancedAE is optional for this mod
    compileOnly fg.deobf("curse.maven:advancedae-1084104:7939754")
    runtimeOnly fg.deobf("curse.maven:advancedae-1084104:7939754")

    // Mekanism is optional for this mod
    runtimeOnly "curse.maven:mekanism-268560:5146982"
    runtimeOnly "curse.maven:mekanism-generators-268566:5146985"

    // MixinExtras for WrapOperation in mixins
    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.5"))
    implementation("io.github.llamalad7:mixinextras-forge:0.3.5")

    runtimeOnly files("libs/observable-5.4.4.jar")

    testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

configurations.testRuntimeClasspath {
    exclude group: 'de.mari_023', module: 'ae2wtlib'
    exclude group: 'curse.maven', module: 'mekanism-268560'
    exclude group: 'curse.maven', module: 'mekanism-generators-268566'
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes([
            "Specification-Title"     : mod_id,
            "Specification-Vendor"    : mod_authors,
            "Specification-Version"   : "1",
            "Implementation-Title"    : project.name,
            "Implementation-Version"  : project.jar.archiveVersion,
            "Implementation-Vendor"   : mod_authors,
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
